k8s/calculator-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: calculator-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator
      version: v1
  template:
    metadata:
      labels:
        app: calculator
        version: v1
        group: wta-deploy
      annotations:
        proxy.istio.io/config: |-
          proxyStatsMatcher:
            inclusionRegexps:
            - ".*"
    spec:
      containers:
      - name: calculator
        image: tanminkwan/wta-miniagent:latest
        imagePullPolicy: Always
        ports:
          - protocol: TCP
            containerPort: 5000
