k8s/game_panel-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: game-panel-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-panel
      version: v1
  template:
    metadata:
      labels:
        app: game-panel
        version: v1
        group: wta-deploy
      annotations:
        proxy.istio.io/config: |-
          proxyStatsMatcher:
            inclusionRegexps:
            - ".*"
    spec:
      containers:
      - name: game-panel
        image: tanminkwan/wta-miniagent:latest
        imagePullPolicy: Always
        ports:
          - protocol: TCP
            containerPort: 5000
