k8s/game_panel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-panel
spec:
  type: ClusterIP
  selector:
    app: game-panel
  ports:
  - protocol: TCP
    targetPort: 5000
    port: 5000
    name: http
